--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ afl-g++-fast
 afl-gotcpu
 afl-ld
 afl-ld-lto
-afl-proc-trace
+afl-cs-proxy
 afl-qemu-trace
 afl-showmap
 afl-tmin
@@ -95,3 +95,4 @@ utils/optimin/optimin
 utils/persistent_mode/persistent_demo
 utils/persistent_mode/persistent_demo_new
 utils/persistent_mode/test-instr
+!cs_mode/coresight-trace
