--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,12 @@
 [submodule "utils/optimin/EvalMaxSAT"]
 	path = utils/optimin/EvalMaxSAT
 	url = https://github.com/FlorentAvellaneda/EvalMaxSAT
-[submodule "cs_mode/proc-trace"]
-	path = cs_mode/proc-trace
-	url = git@github.com:RICSecLab/proc-trace.git
 [submodule "cs_mode/glibc"]
 	path = cs_mode/glibc
 	url = https://sourceware.org/git/glibc.git
 [submodule "cs_mode/patchelf"]
 	path = cs_mode/patchelf
 	url = https://github.com/NixOS/patchelf.git
+[submodule "cs_mode/coresight-trace"]
+	path = cs_mode/coresight-trace
+	url = git@github.com:RICSecLab/coresight-trace.git
