--- a/coresight_mode/Makefile
+++ b/coresight_mode/Makefile
@@ -2,6 +2,10 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2021 Ricerca Security, Inc. All rights reserved.
 
+all:
+	@echo trying to use GNU make...
+	@gmake all || echo please install GNUmake
+
 build:
 	@echo trying to use GNU make...
 	@gmake build || echo please install GNUmake
@@ -10,4 +14,4 @@ patch:
 	@echo trying to use GNU make...
 	@gmake patch || echo please install GNUmake
 
-.PHONY: build patch
+.PHONY: all build patch
